tried to fix the invisibility of background image in github only

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 body {
   position: relative;
   min-height: 100vh;
-  background-image: url(/images/bgi1.png);
+  background-image: url('./images/bgi1.png');
   background-repeat: no-repeat;
   background-size: cover;
   /* background-color: rgb(57, 215, 255); */
